# farol

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  MAINTAINERS.md  README.md  RFCS.md  SECURITY.md  TRADEMARK.md  farol.toml  pyproject.toml  rustfmt.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  rfc.md
.github/workflows/: ci.yml  docs.yml  labeler.yml  pr-size.yml  pr-title.yml  release.yml  stale.yml
crates/farol-cli/: Cargo.toml
crates/farol-cli/src/: lib.rs  main.rs  serve.rs
crates/farol-core/: Cargo.toml
crates/farol-core/src/: assets.rs  build.rs  cache.rs  config.rs  error.rs  files.rs  frontmatter.rs  graph.rs  hash.rs  images.rs  lib.rs  links.rs  markdown.rs  nav.rs  page.rs  plugin.rs  scaffold.rs  search.rs  slug.rs  theme.rs  toc.rs  url.rs
crates/farol-core/src/plugins/: host.rs  mod.rs
crates/farol-core/src/plugins/core/: admonitions.rs  anchor_links.rs  code_copy.rs  code_include.rs  containers.rs  edit_on_git.rs  highlight.rs  mod.rs  prev_next.rs  reading_time.rs  redirects.rs  search.rs  sitemap.rs
crates/farol-core/src/scaffold_assets/: farol.toml  getting-started.md  index.md
crates/farol-core/src/theme/: embedded.rs  external.rs  manifest.rs  mod.rs
crates/farol-core/src/theme/api/: theme.toml
crates/farol-core/src/theme/api/assets/: api.css
crates/farol-core/src/theme/api/templates/: default.html
crates/farol-core/src/theme/api/templates/partials/: footer.html  header.html  nav-panel.html
crates/farol-core/src/theme/book/: theme.toml
crates/farol-core/src/theme/book/assets/: book.css
crates/farol-core/src/theme/book/templates/: default.html
crates/farol-core/src/theme/book/templates/partials/: nav-linear.html  search.html
crates/farol-core/src/theme/default/: theme.toml
crates/farol-core/src/theme/default/assets/: base.css  farol.js  search.js
crates/farol-core/src/theme/default/templates/: default.html  landing.html
crates/farol-core/src/theme/default/templates/partials/: footer.html  header.html  search.html  sidebar.html
crates/farol-core/src/theme/shared/: farol.js
crates/farol-py/: Cargo.toml
crates/farol-py/src/: host.rs  lib.rs
docs/: index.md
docs/getting-started/: index.md
docs/guides/: deploy.md  plugins.md  themes.md  writing.md
docs/reference/: cli.md  configuration.md
python/farol/: __init__.py  __main__.py  _manager.py
python/farol/testing/: __init__.py  _tester.py
rfcs/: 0000-template.md
