[workspace]
resolver = "2"
members = [
    "crates/farol-core",
    "crates/farol-cli",
    "crates/farol-py",
]
# farol-py is a PyO3 extension module that only links under maturin.
# Keep it out of `cargo build --workspace` and build it with `uv run maturin develop`.
default-members = [
    "crates/farol-core",
    "crates/farol-cli",
]

[workspace.package]
version      = "0.0.1"
edition      = "2021"
rust-version = "1.75"
authors      = ["ferrumio"]
license      = "Apache-2.0"
repository   = "https://github.com/ferrumio/farol"
homepage     = "https://github.com/ferrumio/farol"
readme       = "README.md"

[workspace.dependencies]
farol-core = { path = "crates/farol-core", version = "0.0.1" }

clap               = { version = "4", features = ["derive"] }
serde              = { version = "1", features = ["derive"] }
serde_yaml         = "0.9"
thiserror          = "1"
miette             = { version = "7", features = ["fancy"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml               = "0.8"
ignore             = "0.4"
markdown           = "1"
minijinja          = { version = "2", features = ["loader"] }
include_dir        = "0.7"
sha2               = "0.10"
percent-encoding   = "2"
url                = "2"
redb               = "2"
bincode            = { version = "2", features = ["serde"] }
rayon              = "1"
syntect            = { version = "5", default-features = false, features = ["default-fancy"] }
two-face           = "0.5"
tantivy            = "0.26"
serde_json         = "1"
image              = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
base64             = "0.22"
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "net", "time", "fs"] }
axum               = { version = "0.8", features = ["ws"] }
notify             = "8"
futures-util       = "0.3"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"

[profile.dev]
debug = "line-tables-only"
