[build-system]
requires      = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name            = "farol"
version         = "0.0.1"
description     = "Fast, plugin-first documentation generator. Rust core, Python-friendly."
readme          = "README.md"
license         = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors         = [{ name = "ferrumio" }]
keywords        = ["documentation", "markdown", "static-site-generator", "docs", "rust"]
dependencies    = ["pluggy>=1.3"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]

[project.urls]
Homepage      = "https://github.com/ferrumio/farol"
Repository    = "https://github.com/ferrumio/farol"
Issues        = "https://github.com/ferrumio/farol/issues"
Documentation = "https://github.com/ferrumio/farol#readme"
Changelog     = "https://github.com/ferrumio/farol/releases"

[project.scripts]
farol = "farol.__main__:main"

[tool.maturin]
manifest-path = "crates/farol-py/Cargo.toml"
module-name   = "farol._native"
python-source = "python"
