[package]
name         = "farol-cli"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Command-line interface for farol."

[lib]
name = "farol_cli"
path = "src/lib.rs"

[[bin]]
name = "farol"
path = "src/main.rs"

[dependencies]
farol-core         = { workspace = true }
clap               = { workspace = true }
miette             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tokio              = { workspace = true }
axum               = { workspace = true }
notify             = { workspace = true }
futures-util       = { workspace = true }
