[package]
name         = "farol-core"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Core engine for farol: the docs generator forged in Rust, lit for life."

[dependencies]
serde            = { workspace = true }
serde_yaml       = { workspace = true }
thiserror        = { workspace = true }
miette           = { workspace = true }
tracing          = { workspace = true }
toml             = { workspace = true }
ignore           = { workspace = true }
markdown         = { workspace = true }
minijinja        = { workspace = true }
include_dir      = { workspace = true }
sha2             = { workspace = true }
percent-encoding = { workspace = true }
url              = { workspace = true }
redb             = { workspace = true }
bincode          = { workspace = true }
rayon            = { workspace = true }
syntect          = { workspace = true }
two-face         = { workspace = true }
tantivy          = { workspace = true }
serde_json       = { workspace = true }
image            = { workspace = true }
base64           = { workspace = true }

[dev-dependencies]
tempfile = "3"
