[package]
name         = "farol-py"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Python bindings for farol."

[lib]
name       = "farol"
crate-type = ["cdylib", "rlib"]

[dependencies]
farol-core = { workspace = true }
pyo3       = { version = "0.23", features = ["extension-module", "abi3-py39"] }
