[package]
name         = "farol-py"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Python bindings for farol."

[lib]
name       = "farol"
crate-type = ["cdylib", "rlib"]

[dependencies]
farol-core = { workspace = true }
farol-cli  = { path = "../farol-cli", version = "0.0.2" }
pyo3       = { version = "0.28", features = ["extension-module", "serde"] }
serde_json = "1"
pythonize  = "0.28"
